# MesonBuildTest

./: .gitignore
src/: .meson.build.swp  list_files_with_ext.py  main.cpp  meson.build  say.cpp  say.h  useless_header.h
src/subdir/: useless_header.cpp  useless_header.h
